--- a/seminarski.bib
+++ b/seminarski.bib
@@ -1,10 +1,10 @@
 @techreport{Milner:1972:LCF:891954,
- author = {Milner, Robin},
- title = {Logic for Computable Functions: Description of a Machine Implementation.},
- year = {1972},
- source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Astan%3ASTAN%2F%2FCS-TR-72-288},
- publisher = {Stanford University},
- address = {Stanford, CA, USA},
+author = {Milner, Robin},
+title = {Logic for Computable Functions: Description of a Machine Implementation.},
+year = {1972},
+source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Astan%3ASTAN%2F%2FCS-TR-72-288},
+publisher = {Stanford University},
+address = {Stanford, CA, USA}
 }
 
 @article{ppNETframework,
@@ -22,7 +22,7 @@ year = {2014}
  year = {2008},
  isbn = {0470242116, 9780470242117},
  publisher = {Wiley-Interscience},
- address = {New York, NY, USA},
+ address = {New York, NY, USA}
 }
 
 @book{expertFS,
@@ -31,7 +31,16 @@ year = {2014}
  year = {2007},
  isbn = {978-1-59059-850-4, 1-59059-850-4},
  publisher = {Kinetic Publishing Services, LLC},
- address = {New York, NY 10013.},
+ address = {New York, NY 10013}
+}
+
+@book{fizzBuzz,
+title = {Book of F\# Breaking Free with Managed Functional Programming},
+author = {Dave Fancher},
+year = {March 2014},
+isbn = {978-1-59327-552-5},
+publisher = {No Starch Press},
+adress = {{San Francisco, CA 94103 USA}}
 }
 
 @book{progFs,
@@ -40,13 +49,20 @@ year = {2014}
  year = {2009},
  isbn = {978-0-596-15364-9},
  publisher = {O’Reilly Media},
- address = {1005 Gravenstein Highway North},
+ address = {1005 Gravenstein Highway North}
 }
 
 @misc{microsoft_.net,
 title = {{.NET framework}},
 note = {on-line at: \url{https://dotnet.microsoft.com/learn/dotnet/what-is-dotnet}},
-author = {Microsoft}
+author = {Microsoft},
+year = {2019}
+}
+
+@misc{unitsOfMeasure,
+title = {{Tour of F\#}},
+note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/fsharp/tour}},
+author = {Microsoft},
 year = {2019}
 }
 
@@ -60,28 +76,28 @@ author = {ReactiveX}
 @misc{apm,
 title = {{Asynchronous Programming Model (APM)}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/standard/asynchronous-programming-patterns/asynchronous-programming-model-apm}},
-author = {Microsoft}
+author = {Microsoft},
 year = {2019}
 }
 
 @misc{cli,
 title = {{Get started with F\# with the .NET Core CLI}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/fsharp/get-started/get-started-command-line}},
-author = {Microsoft}
+author = {Microsoft},
 year = {2019}
 }
 
 @misc{msil,
 title = {{Assemblies in the Common Language Runtime (MSIL)}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/framework/app-domains/assemblies-in-the-common-language-runtime}},
-author = {Microsoft}
+author = {Microsoft},
 year = {2019}
 }
 
 @misc{microsoft_c,
 title = {{C\# Guide}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/csharp/index}},
-author = {Microsoft}
+author = {Microsoft},
 year = {2019}
 }
 
@@ -144,7 +160,7 @@ year = {2019}
 @misc{ionide,
 title = {{Ionide}},
 note = {on-line at: \url{http://ionide.io/}},
-%author = {{Microsoft}},
-%year = {2019}
+author = {{Microsoft}},
+year = {2019}
 }
 
